updated and added copy method + bug fixes